# textutils

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/textutils/: __init__.py  cli.py  text_processor.py
tests/: __init__.py  test_text_processor.py  test_textutils.py
